fix to lib nav2

--- a/htdocs/css/fILL-public-accessible.1.1a.css
+++ b/htdocs/css/fILL-public-accessible.1.1a.css
@@ -48,7 +48,7 @@
 }
 /* visited link */
 #lib-nav-primary li a:visited {
-  background: #6a99c9;
+  background: #0f4072;
   color: #fff;
 }
 /* mouse over link */
