--- a/htdocs/css/fILL-public-accessible.1.1a.css
+++ b/htdocs/css/fILL-public-accessible.1.1a.css
@@ -136,8 +136,6 @@
   color: #fff;
 }
 
-
-
 #csssubmenu li.current_tab a
 {
     color: #000 ;
@@ -145,7 +143,7 @@
 }
 
 #instructions {
-    margin: 0em 1em 1em 1em;
+    margin: 1em;
     display: block;
     padding: 1.25em; 
 }
