welcome page cuts

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -2,14 +2,6 @@
 
 <div id="main-left" class="tone-box" role="main">
 	<h2>Quick Links</h2>
-
-	<p><strong>Counting Opinions</strong></p>
-	<ul>
-	  <li><a href="http://mb.countingopinions.com/index.php?page_id=4">Statistics/Ready Reports</a></li>
-	  <li><a href="http://mb.countingopinions.com/memberlist_details.php?l=14702">Addresses, phone numbers, and links to library web sites</a></li>
-	  <li><a href="http://mb.countingopinions.com/locations.php?l=14702">Map of Manitoba Public Libraries</a></li>
-	  <li><a href="http://mb.countingopinions.com/index.php?page_id=4">eLibraries Manitoba monthly statistics</a></li>
-	</ul>
 	<!--
 	<p class="debuginfo">Logged in as [<TMPL_VAR NAME="username">]</p>
 	<p class="debuginfo">Session id [<TMPL_VAR NAME="sessionid">]</p>
@@ -26,7 +18,7 @@
 
 	<strong>More Info</strong>
 	<ul>
-	<li><p>More can be found under <a href="/cgi-bin/info.cgi?rm=info_documents_form">Documents>Info</a></p></li>
+	<li><p>More can be found under <a href="/cgi-bin/info.cgi?rm=info_documents_form">Documents</a></p></li>
 	</ul>
 </div>
 
