fixed use of # symbol

--- a/templates/myaccount/settings.tmpl
+++ b/templates/myaccount/settings.tmpl
@@ -28,7 +28,7 @@
 	<td>
 	  <table>
 	    <tr>
-	      <td>Street address or Box#:</td>
+	      <td>Street address or PO Box Number:</td>
 	      <td>
 		<input TYPE="text" NAME="mailing_address_line1" SIZE="60" MAXLENGTH="200" VALUE="<TMPL_VAR NAME=editMailingAddressLine1>">
 	      </td>
