removed redundant tab headings

--- a/templates/search/current.tmpl
+++ b/templates/search/current.tmpl
@@ -169,17 +169,9 @@ $('document').ready(function(){
 	<li><a href="#tabs-3">We could not lend</a></li>
       </ul>
 
-      <div id="tabs-1">
-	<h4>Current borrowing</h4>
-      </div>
-
-      <div id="tabs-2">
-	<h4>Current lending</h4>
-      </div>
-
-      <div id="tabs-3">
-	<h4>We could not lend</h4>
-      </div>
+      <div id="tabs-1"></div>
+      <div id="tabs-2"></div>
+      <div id="tabs-3"></div>
 
     </div>
 
