minor cleanup, mostly table column headings

--- a/templates/info/reports.tmpl
+++ b/templates/info/reports.tmpl
@@ -61,7 +61,7 @@ $('document').ready(function(){
 			}
 		]
 	},
-        "bAutoWidth": false
+        "bAutoWidth": true
     });
 
 //    $('#datatable_summary tbody tr').live('mouseover mouseout', function (event) {    // deprecated in jquery 1.7
