--- a/templates/myaccount/library-barcodes.tmpl
+++ b/templates/myaccount/library-barcodes.tmpl
@@ -6,7 +6,7 @@
 
 
 <script type="text/javascript">
-//set_secondary_tab("menu_borrow_receive");
+set_secondary_tab("menu_myaccount_library_barcodes");
 
 $.ajaxSetup ({  
   cache: false  
