--- a/templates/submenu_patrons.tmpl
+++ b/templates/submenu_patrons.tmpl
@@ -3,7 +3,7 @@
 <!--div id="submenu"-->
 <div id="csssubmenu">
   <ul>
-    <li id="menu_patrons">
+    <li id="menu_patrons_list">
       <a href=/cgi-bin/patrons.cgi?rm=patrons_form>
       Patron list
       </a>
