--- a/templates/info/view_report.tmpl
+++ b/templates/info/view_report.tmpl
@@ -19,15 +19,7 @@ $('document').ready(function(){
         "iDisplayLength": 10,
         "aLengthMenu": [[10, 25, 50, -1], [10, 25, 50, "All"]],
 	"oTableTools": {
-                "sSwfPath": "/plugins/DataTables-1.10.2/extensions/TableTools/swf/copy_csv_xls_pdf.swf",
-		"aButtons": [
-			"copy", "csv", "xls", "pdf", "print",
-			{
-				"sExtends":    "collection",
-				"sButtonText": "Save",
-				"aButtons":    [ "csv", "xls", "pdf" ]
-			}
-		]
+          "sSwfPath": "/plugins/DataTables-1.10.2/extensions/TableTools/swf/copy_csv_xls_pdf.swf"
 	},
         "aaSorting": [[0,"asc"],[1,"asc"]],
         "bAutoWidth": true,
@@ -58,7 +50,6 @@ $('document').ready(function(){
 
     <div id="myDiv">
       <h2>ILL Stats</h2>
-
 	<div class="dataTable_wrapper">
 	  <table id="datatable_report">
 	    <thead>
