--- a/templates/rotations/admin/reports/item_circ_counts.tmpl
+++ b/templates/rotations/admin/reports/item_circ_counts.tmpl
@@ -22,7 +22,7 @@ $('document').ready(function(){
 	.error(function() {
         })
 	.complete(function() { 
-            oTable = $('#gradient-style').dataTable({
+            oTable = $('#item-circ-counts-table').dataTable({
                 "bJQueryUI": true,
                 "sPaginationType": "full_numbers",
                 "bInfo": true,
@@ -32,15 +32,7 @@ $('document').ready(function(){
                 "bLengthChange": true,
                 // TableTools requires Flash version 10...
                 "oTableTools": {
-                    "sSwfPath": "/plugins/DataTables-1.10.2/extensions/TableTools/swf/copy_csv_xls_pdf.swf",
-                    "aButtons": [
-                      "copy", "csv", "xls", "pdf", "print",
-                      {
-                          "sExtends":    "collection",
-                          "sButtonText": "Save",
-                          "aButtons":    [ "csv", "xls", "pdf" ]
-                      }
-                   ]
+                    "sSwfPath": "/plugins/DataTables-1.10.2/extensions/TableTools/swf/copy_csv_xls_pdf.swf"
                 }
           });
       });
