--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -1,5 +1,16 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 
+<script type="text/javascript">
+$('document').ready(function(){
+
+    $("#search").hide();
+    $(".inline-items").children().hide();
+//    $(".inline-items").children(":contains('home')").show();
+    $("#fill-button").hide();  // hide the logout button, as it makes no sense here
+
+});
+</script>
+
 <div class="clear">
  <form action="/cgi-bin/lightning.cgi" method="post" name="loginform">
   <div class="login">
