hide the correct search div

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -115,9 +115,9 @@ $('document').ready(function(){
   </div><!--Div id header-->
 
 <!--***************ARIA MARKER 'SEARCH'***************-->
-<div id="search-container">
+<div id="search-container" style="display: none">
   <div id="search" role="search">
-    <div id="header_searchbar" style="display: none">
+    <div id="header_searchbar">
     <form id="searchForm" name="search">
       <input id="query" type="text" size="50"/>
       <input id="button" type="submit" value="Search"/>
