--- a/templates/search/lightning.tmpl
+++ b/templates/search/lightning.tmpl
@@ -11,7 +11,7 @@
 <script type="text/javascript">
 
 $('document').ready(function(){
-  $("#header_searchbar").show();
+  $("#search-container").show();
   $("#query").focus();
 });
 
