--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -12,14 +12,32 @@
   <link type="text/css" rel="stylesheet" href="/css/fILL-public-datatables.1.0.css"></link>
   <link type="text/css" rel="stylesheet" href="/css/feedstyles.1.1.css">
 
+  <!-- jQuery-UI theme:
+       1. create a new theme using ThemeRoller, and save it to htdocs/themes/xxxx/
+       2. comment out the default jquery-ui.css ("/plugins/jquery-ui-1.11.1/jquery-ui.css")
+       3. add <link... to your new theme ("/themes/xxxx/jquery-ui.css")
+       4. comment out default jquery-ui.js ("/plugins/jquery-ui-1.11.1/jquery-ui.js")
+       5. add <script... to your new theme ("/themes/xxxx/jquery-ui.js")
+
+       The order of these links and scripts is important!
+  -->
+<!-- THEME: comment out default jquery css
   <link rel="stylesheet" type="text/css" href="/plugins/jquery-ui-1.11.1/jquery-ui.css">
+ -->
+<!-- THEME: add new theme: -->
+  <link rel="stylesheet" type="text/css" href="/themes/fILL-simple/jquery-ui.css">
 
   <link rel="stylesheet" type="text/css" href="/plugins/DataTables-1.10.2/media/css/jquery.dataTables.css">
   <link rel="stylesheet" type="text/css" href="/plugins/DataTables-1.10.2/extensions/TableTools/css/dataTables.tableTools.css">
 
 
   <script type="text/javascript" src="/js/jquery-1.11.1.js"></script>  <!-- change to jquer-1.11.1.min.js before going to production -->
-  <script type="text/javascript" src="/plugins/jquery-ui-1.11.1/jquery-ui.js"></script>
+
+<!-- THEME: comment out default jquery-ui.js:
+  <script type="text/javascript" src="/plugins/jquery-ui-1.11.1/jquery-ui.js"></script> 
+-->
+<!-- THEME: add new theme's .js: -->
+  <script type="text/javascript" src="/themes/fILL-simple/jquery-ui.js"></script>
 
 
   <script type="text/javascript" src="/js/menu-counters-1.0.js"></script>
@@ -28,7 +46,11 @@
   <script type="text/javascript" charset="utf8" src="/plugins/DataTables-1.10.2/media/js/jquery.dataTables.js"></script>
   <script type="text/javascript" language="javascript" src="/plugins/DataTables-1.10.2/extensions/TableTools/js/dataTables.tableTools.js"></script>
 
-
+  <!-- Testing DataTables jQuery-UI themeroller integration -->
+<!--
+  <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/plug-ins/a5734b29083/integration/jqueryui/dataTables.jqueryui.css">
+  <script type="text/javascript" src="//cdn.datatables.net/plug-ins/a5734b29083/integration/jqueryui/dataTables.jqueryui.js"></script>
+-->
 <script type="text/javascript">
 
 $.ajaxSetup ({  
