updates to button styles

--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -77,7 +77,7 @@
   </div>
 
   <div id="header-right">
-    <div id="logout-button"><a href="?authen_logout=1" type="button" role="button" id="fill-button">log out</a></div>
+    <div id="logout-button"><a href="?authen_logout=1" type="button" role="button" id="fill-button" class="public-button">log out</a></div>
     <div id="patron-info">
   <!-- The id="username" div is necessary: the username gets extracted (in 
        fILL_client-public-x.y.js), and passed to the code that allows the patron 
