--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -140,7 +140,7 @@ $('document').ready(function(){
 <div id="search-container" style="display: none">
   <div id="search" role="search">
     <div id="header_searchbar">
-    <form id="searchForm" name="search">
+    <form id="searchForm" name="search" class="library-button">
       <input id="query" type="text" size="50"/>
       <input id="button" type="submit" value="Search"/>
       <input id="help" type="submit" value="?" onClick="javascript:searchHelp(this); return false;">
