more button updates

--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -27,13 +27,13 @@ $('document').ready(function(){
           <input type="password" size="20" name="authen_password" tabindex="2" id="authen_passwordfield"><br>
         </fieldset>
         <fieldset>
-          <input type="submit" class="button-left" value="Sign In" name="authen_loginbutton" tabindex="4" id="authen_loginbutton">
+          <input type="submit" class="button-left public-style" value="Sign In" name="authen_loginbutton" tabindex="4" id="authen_loginbutton">
           <input type="checkbox" value="1" name="authen_rememberuser" tabindex="3" id="authen_rememberuserfield"><span>Remember User Name</span><br>
         </fieldset>
       </div>
       <div class="login-footer">
         <p>Don&rsquo;t have an account?</p>
-          <a href="?rm=registration_form" type="button" role="button" id="fill-button">Sign Up!</a>
+          <a href="?rm=registration_form" type="button" role="button" id="fill-button" class="public-style">Sign Up!</a>
 
         <p>If you cannot remember your user name or password, please contact your local public library.</p>
       </div>
