--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -96,7 +96,7 @@
     </div>
 
     <div id="header-right">
-      <div id="logout-button"><a href="?authen_logout=1" type="button" role="button" id="fill-button">log out</a></div>
+      <div id="logout-button"><a href="?authen_logout=1" type="button" role="button" id="fill-button" class="public-style">log out</a></div>
       <div id="patron-info">
     <!-- The id="username" div is necessary: the username gets extracted (in 
          fILL_client-public-x.y.js), and passed to the code that allows the patron 
@@ -137,7 +137,7 @@
 	   If you change the id here, change it in fILL_client-public too,
 	   or the automatic search won't fire.
 	-->
-      <input id="search-submit-button" type="submit" value="Go">
+      <input id="search-submit-button" type="submit" value="Go" class="public-style">
     </form>
   </div>
 </div> <!-- search-container -->
