--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -7,7 +7,10 @@
 
 </div>
 </footer>
-<img class="bison" alt="Manitoba Bison Logo" title="Service provided by the Government of Manitoba" src="/img/manitoba.gif">
+
+<div id="bison-container">
+  <a href="http://www.gov.mb.ca/chc/"><img class="bison" alt="Manitoba Bison Logo" title="Coordinated by the Public Library Service Branch of the Government of Manitoba Tourism, Culture, Heritage and Consumer Protection" src="/img/manitoba.gif"></a>
+</div>
 
 </body>
 </html>
