--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -528,7 +528,6 @@ button {
 	font-size: 1.4em;
 	margin: .5em;
 	padding: .3em;
-	border: 1px solid #000;
 	margin: 10px;
 	color: #fff;!important
 	font-size: 1.4em;
@@ -539,13 +538,6 @@ button {
 .button-left:link {
 	float: left;
 	clear: right;
-	padding: .5em;
-	border: 1px solid #000;
-	margin: 10px;
-	color: #fff;!important
-	font-size: 1.4em;
-	text-transform: capitalize;
-	cursor: pointer;
 }
 
 .button-left:hover {
@@ -560,9 +552,7 @@ button {
 
 .button-right {
 	float: right;
-    font-size: 1.4em;
-	margin: 1em;
-	padding: .3em;
+	clear: left;
 }
 
 .tone-box.button-left {
