--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -113,7 +113,7 @@
 	search_process to feed the *real* search page -->
       <input id="query" type="text" name="query" size="50px" placeholder="Search" value="<TMPL_VAR name='query'>">
       <input id="rm" type="hidden" name="rm" value="search_form">
-      <input type="submit" value="Go">
+      <input type="submit" value="Go" class="public-style">
     </form>
   </div>
 </div> <!-- search-container -->
