--- a/templates/public/logged_out.tmpl
+++ b/templates/public/logged_out.tmpl
@@ -9,7 +9,7 @@
 	<p>Thanks for using fILL!</p>
 		<form METHOD=POST ACTION="">
 		     <input TYPE="hidden" NAME="rm" VALUE="search_form">
-		     <input type="submit" name="submit" value="Log in" />
+		     <input type="submit" name="submit" value="Log in" class="public-style" />
 		</form>
 	</div>
 
