--- a/templates/public/myaccount.tmpl
+++ b/templates/public/myaccount.tmpl
@@ -79,7 +79,7 @@ $('document').ready(function(){
         <tr><th scope="row">Patron ID number</th><td id="pid"><TMPL_VAR name="pid"></td></tr>
       </table>
     
-    <div id="but-link">
+    <div id="butlink">
     <a id="showChangePassButton" href="javascript:void(0)" onclick="toggleChangePassDiv()" class="button-left public-style" role="button" type="button">Change password</a>
     </div>
 
