--- a/templates/public/myaccount.tmpl
+++ b/templates/public/myaccount.tmpl
@@ -79,9 +79,9 @@ $('document').ready(function(){
         <tr><th scope="row">Patron ID number</th><td id="pid"><TMPL_VAR name="pid"></td></tr>
       </table>
     
-    <div id="butlink">
-    <a id="showChangePassButton" href="javascript:void(0)" onclick="toggleChangePassDiv()" class="button-left public-style" role="button" type="button">Change password</a>
-    </div>
+ 
+    <a id="showChangePassButton butlink" href="javascript:void(0)" onclick="toggleChangePassDiv()" class="button-left public-style" role="button" type="button">Change password</a>
+
 
     <div id="divChangePass">
       <form id="changePassword_form" name="changePassword" action="" method="post">
