--- a/templates/search/make_request.tmpl
+++ b/templates/search/make_request.tmpl
@@ -34,6 +34,7 @@ $('document').ready(function(){
 
     <form action="/cgi-bin/lightning.cgi" method="post">
 
+<div id="toptwo">
 <!--SECTION-->
 <div id="midleft">
 	    <h2>Required</h2>
@@ -82,7 +83,7 @@ $('document').ready(function(){
     -->
     
     <br/>
-
+</div> <!-- id="toptwo" -->
     <div id="midfooter">
       <div id="midinner">
 
