fill button test

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -126,7 +126,7 @@ $('document').ready(function(){
 
   <!-- Not displayed on any page except lightning (at the moment) -->
 <div id="header-right">
-      <div id="logout-button"><a href="?authen_logout=1" type="button" role="button" id="fill-button">log out</a></div>
+      <div id="logout-button fill-button" class="library-style"><a href="?authen_logout=1" type="button" role="button">log out</a></div>
   <div id="patron-info">
       <p><TMPL_VAR NAME="username"></p>
       <p id="library_name"><TMPL_VAR NAME="library"></p>
