--- a/templates/rotations/at_my_library.tmpl
+++ b/templates/rotations/at_my_library.tmpl
@@ -1,6 +1,9 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <TMPL_INCLUDE NAME="submenu_rotations.tmpl">
 
+<script type="text/javascript" src="/js/rotation-atlibrary-1.0.js"></script>
+
+
 <script type="text/javascript">
 
 $.ajaxSetup ({  
@@ -19,21 +22,26 @@ $('document').ready(function(){
 
   set_secondary_tab("menu_rotations_current");
 
-  oTable = $('#at-my-library').dataTable({
-    "bJQueryUI": true,
-    "sPaginationType": "full_numbers",
-    "bInfo": true,
-    "bSort": true,
-    "sDom": '<"H"Tfr>t<"F"ip>',
-    "iDisplayLength": 25,
-    "bLengthChange": true,
-    "oTableTools": {
-      "sSwfPath": "/plugins/DataTables-1.10.2/extensions/TableTools/swf/copy_csv_xls_pdf.swf"
-      },
-    "columnDefs": [{
-      "targets": 0,
-      "visible": false
-    }]
+  $.getJSON('/cgi-bin/get-rotations-current.cgi', {lid: <TMPL_VAR name="lid">},
+     function(data){
+       build_table(data); 
+
+       oTable = $('#at-my-library').dataTable({
+         "bJQueryUI": true,
+         "sPaginationType": "full_numbers",
+         "bInfo": true,
+         "bSort": true,
+         "sDom": '<"H"Tfr>t<"F"ip>',
+         "iDisplayLength": 25,
+         "bLengthChange": true,
+         "oTableTools": {
+           "sSwfPath": "/plugins/DataTables-1.10.2/extensions/TableTools/swf/copy_csv_xls_pdf.swf"
+         },
+         "columnDefs": [{
+           "targets": 0,
+           "visible": false
+         }]
+       });
    });
 });
 
@@ -42,28 +50,12 @@ $('document').ready(function(){
 
 <div id="center" role="main">
 
+    <div id="waitDiv"><br/>      Generating barcode images... <img src="/wait.gif">
+    </div>
+
     <div id="myDiv">
-	<table id="at-my-library">
-	  <thead>
-	    <tr><th>id</th><th>Callno</th><th>Title</th><th>Author</th><th>Barcode</th><th>Received</th></tr>
-	  </thead>
-	  <tfoot><tr><td colspan="6">You can print this and take it to the stacks.</td></tr></tfoot>
-	  <tbody>
-	    <TMPL_LOOP name="rotationItems">
-	      <tr>
-		<td><TMPL_VAR NAME="id"></td>
-		<td><TMPL_VAR NAME="callno"></td>
-		<td><TMPL_VAR NAME="title"></td>
-		<td><TMPL_VAR NAME="author"></td>
-		<td>
-		  <TMPL_VAR NAME="barcode"><br/>
-		    <img src="data:image/png;base64,<TMPL_VAR NAME="barcode_image">"/>
-		</td>
-		<td><TMPL_VAR NAME="timestamp"></td>
-	      </tr>
-	    </TMPL_LOOP>
-	  </tbody>
-	</table>
+      <h3>Rotation items currently at my library</h3>
+      <div id="mylistDiv"></div>
     </div>
 
     <div id="instructions" class="tone-box">
