--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -126,7 +126,7 @@ $('document').ready(function(){
 
   <!-- Not displayed on any page except lightning (at the moment) -->
 <div id="header-right">
-      <a href="?authen_logout=1" type="button" role="button" id="logout-button" class="library-style">log out</a>
+    <div id="logout-button"><a href="?authen_logout=1" type="button" role="button" id="fill-button" class="library-style">log out</a></div>
   <div id="patron-info">
       <p><TMPL_VAR NAME="username"></p>
       <p id="library_name"><TMPL_VAR NAME="library"></p>
@@ -140,10 +140,10 @@ $('document').ready(function(){
 <div id="search-container" style="display: none">
   <div id="search" role="search">
     <div id="header_searchbar">
-    <form id="searchForm" name="search" class="library-button">
+    <form id="searchForm" name="search">
       <input id="query" type="text" size="50"/>
-      <input id="button" type="submit" value="Search"/>
-      <input id="help" type="submit" value="?" onClick="javascript:searchHelp(this); return false;">
+      <input id="button" type="submit" value="Search" class="library-style" />
+      <input id="help" type="submit" value="?" onClick="javascript:searchHelp(this); return false;" class="library-style">
     </form>
     </div>
   </div>
