--- a/templates/logged_out.tmpl
+++ b/templates/logged_out.tmpl
@@ -17,7 +17,7 @@ $('document').ready(function(){
 	<p>Thanks for using fILL!</p>
 	<form METHOD=POST ACTION="">
 	     <input TYPE="hidden" NAME="rm" VALUE="search_simple_ajax_form">
-	     <input type="submit" name="submit" value="Log in" />
+	     <input type="submit" name="submit" value="Log in" class="library-style" />
 	</form>
 </div>
 <TMPL_INCLUDE NAME="footer.tmpl">
