--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -29,7 +29,7 @@ $('document').ready(function(){
 
 	<div class="login-footer">
 	  <div class="buttons">
-      <input type="submit" class="button-left library-style" value="Sign In" name="authen_loginbutton" tabindex="4" id="authen_loginbutton">
+      <input type="submit" class="button-left library-style" value="Sign In" name="authen_loginbutton" tabindex="4" id="authen_loginbutton fill-button">
 	  </div>
 	</div>
 
