added table class to page

--- a/templates/info/view_report.tmpl
+++ b/templates/info/view_report.tmpl
@@ -87,7 +87,7 @@ $('document').ready(function(){
     <h2>Instructions</h2>
 
     <h3>Borrowing</h3>
-    <table id="fill-table">
+    <table id="fill-table" class="table-width-lib">
       <tr><td style="border:1px solid black;">Books requested</td><td style="border:1px solid black;"># titles you've requested.</td></tr>
       <tr><td style="border:1px solid black;">Actual requests</td><td style="border:1px solid black;">including retrying unfilleds, etc</td></tr>
       <tr><td style="border:1px solid black;">Unfilled responses</td><td style="border:1px solid black;"># times libraries could not fill (actual) requests</td></tr>
@@ -96,7 +96,7 @@ $('document').ready(function(){
     </table>
 
     <h3>Lending</h3>
-    <table id="fill-table">
+    <table id="fill-table" class="table-width-lib">
       <tr><td style="border:1px solid black;">Requests to lend</td><td style="border:1px solid black;"># requests other libraries have made to you</td></tr>
       <tr><td style="border:1px solid black;">Could not fill</td><td style="border:1px solid black;"># times you responded 'unfilled'</td></tr>
       <tr><td style="border:1px solid black;">Shipped</td><td style="border:1px solid black;">books you sent out.</td></tr>
