--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -425,7 +425,6 @@ input[type=submit]
 {
     margin: .5em;
 	padding: .3em 1em;
-	border: 2px #183935 solid;
 	border-radius: 5px;
     color: #fff;
     font-size: 1.4em;
@@ -437,7 +436,6 @@ input[type=submit]:hover
 {
     margin: .5em;
 	padding: .3em 1em;
-	border: 2px #06a0ca solid;
 	border-radius: 5px;
 	background-color: #06a0ca;
 	color: #fff;
@@ -450,7 +448,6 @@ input[type=submit]:focus
 {
     margin: .5em;
 	padding: .3em 1em;
-	border: 2px #06a0ca solid;
 	border-radius: 5px;
 	background-color: #06a0ca;
 	color: #fff;
@@ -460,7 +457,7 @@ input[type=submit]:focus
 }
 
 
-input[type=submit], input[type=text], input[type=password]
+input[type=text], input[type=password]
 {
     border-radius:5px;
     border: 2px solid inherit;
