--- a/templates/patrons/patrons.tmpl
+++ b/templates/patrons/patrons.tmpl
@@ -91,11 +91,11 @@ $('document').ready(function(){
 
   <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
-    <br/>
-    <p>Update a user's <strong>email address</strong> by clicking on it and changing the text.</p><br/>
-    <p>Update a user's <strong>enabled</strong> status by clicking on it entering '0' or '1' ('0' means they are not enabled).  Hit <strong>[ENTER]</strong> to complete the change.</p><br/>
-    <p>Update a user's <strong>verified</strong> status by clicking on it entering '0' or '1' ('0' means they are not verified).  Hit <strong>[ENTER]</strong> to complete the change.</p><br/>
-    <p>You won't see a user's current <strong>password</strong>, but you can change it by clicking on "Click to change password" for that user.</p><br/>
+    
+    <p>Update a user's <strong>email address</strong> by clicking on it and changing the text.</p>
+    <p>Update a user's <strong>enabled</strong> status by clicking on it entering '0' or '1' ('0' means they are not enabled).  Hit <strong>[ENTER]</strong> to complete the change.</p>
+    <p>Update a user's <strong>verified</strong> status by clicking on it entering '0' or '1' ('0' means they are not verified).  Hit <strong>[ENTER]</strong> to complete the change.</p>
+    <p>You won't see a user's current <strong>password</strong>, but you can change it by clicking on "Click to change password" for that user.</p>
   </div>
 
 </div>
