--- a/templates/search/renew-answer.tmpl
+++ b/templates/search/renew-answer.tmpl
@@ -81,7 +81,7 @@ $('document').ready(function(){
 -->
 	  <p>
 	    Date (yyyy-mm-dd): <input id="datepicker" type="text">
-	    <input type="submit" name="submit_default_due_date" value="Apply due date"/>
+	    <input type="submit" name="submit_default_due_date" value="Apply due date" class="library-style" />
 	  </p>
 	</form>
       </div>
