--- a/templates/search/respond.tmpl
+++ b/templates/search/respond.tmpl
@@ -76,7 +76,7 @@ $('document').ready(function(){
 <div id="center" role="main">
 <br />
   <div id="toggle-unfilled-codes">
-    <input type="button" id="bToggleUnfilledCodes" value="Show the Unfilled codes">
+    <input type="button" id="bToggleUnfilledCodes" value="Show the Unfilled codes" class="library-style">
   </div>
    <div id="unfilled-codes" style="display:none">
     <h3>Unfilled codes</h3>
