--- a/templates/search/shipping.tmpl
+++ b/templates/search/shipping.tmpl
@@ -74,7 +74,7 @@ $('document').ready(function(){
 	  <form id="set_default_due_date" onsubmit="set_default_due_date(this); this.submit_default_due_date.value='Change due date'; return false;">
 	    <p>
 	      Date (yyyy-mm-dd): <input id="datepicker" type="text">
-	      <input type="submit" name="submit_default_due_date" value="Apply due date"/>
+	      <input type="submit" name="submit_default_due_date" value="Apply due date" class="library-style" />
 	    </p>
 	  </form>
 	</div>
