button fixes and small changes

--- a/templates/info/contacts.tmpl
+++ b/templates/info/contacts.tmpl
@@ -86,7 +86,7 @@ $('document').ready(function(){
   <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
     <ol>
-      <li>Click on the email address to create a new email to the library.</li>
+      <li>Click on the email address to send a new email to the library.</li>
     </ol>
   </div>
 </div>
