--- a/templates/rotations/enter_stats.tmpl
+++ b/templates/rotations/enter_stats.tmpl
@@ -54,7 +54,7 @@ $('document').ready(function(){
     </div>
 
     <div id="myDiv">
-      <h3>Enter circ stats</h3>
+      <h3>Enter circulation stats</h3>
       <p id="reminder"><TMPL_VAR NAME="reminder"></p>
       <div id="mylistDiv"></div>
     </div>
@@ -62,12 +62,10 @@ $('document').ready(function(){
   <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
     <ol>
-      <li>[TAB] will take you to the next circ stat entry field.</li>
-      <li>[ENTER] will update the stat but leave you in the same field.</li>
-      <li> </li>
+      <li>[Tab] will take you to the next circ stat entry field.</li>
+      <li>[Enter] will update the stat but leave you in the same field.</li>
       <li>You can also scan the item's barcode into the Search box to bring up just that item.</li>
-      <li> </li>
-      <li>Items will remain on this list until the next library in the rotation receives them.</li>
+       <li>Items will remain on this list until the next library in the rotation receives them.</li>
     </ol>
   </div>
 
