--- a/templates/rotations/holdings_settings.tmpl
+++ b/templates/rotations/holdings_settings.tmpl
@@ -22,7 +22,7 @@
 	  <input TYPE="text" NAME="barcode_subfield" SIZE="1" MAXLENGTH="1" VALUE="<TMPL_VAR NAME=barcode_subfield>">
 	</td>
       </tr><tr>
-	<td>Call # subfield:</td>
+	<td>Call number subfield:</td>
 	<td>
 	  <input TYPE="text" NAME="callno_subfield" SIZE="1" MAXLENGTH="1" VALUE="<TMPL_VAR NAME=callno_subfield>">
 	</td>
@@ -64,7 +64,7 @@
     <input TYPE="hidden" NAME="lid" VALUE="<TMPL_VAR NAME=lid>">
     <input TYPE="hidden" NAME="rm" VALUE="holdings_setup_form">
     <br />
-    <input type="submit" name="submit" value="Save settings" />
+    <input type="submit" name="submit" value="Save settings" class="library-style" />
   </form>
 
 </div>
