--- a/templates/submenu_rotations_admin.tmpl
+++ b/templates/submenu_rotations_admin.tmpl
@@ -5,13 +5,13 @@
   <ul>
     <li id="menu_rotations_report_received_counts">
       <a href="/cgi-bin/rotations_admin.cgi?rm=report_received_cnt">
-      Report - lib rec'd cnts
+      library received accounts
       </a>
     </li>
 
     <li id="menu_rotations_report_item_circ_counts">
       <a href="/cgi-bin/rotations_admin.cgi?rm=report_item_circs">
-      Report - item circs
+      item circulations
       </a>
     </li>
 
