--- a/templates/public/contact.tmpl
+++ b/templates/public/contact.tmpl
@@ -26,22 +26,22 @@ $(document).ready(function(){
             // do nothing
         }
         if (type == 'usermsg') {
-            $('#message_box').append("<div><span class=\"user_name\" style=\"color:#"+ucolor+"\">"+uname+"</span> : <span class=\"user_message\">"+umsg+"</span></div>");
+            $('#mychannel').append("<div><span class=\"user_name\" style=\"color:#"+ucolor+"\">"+uname+"</span> : <span class=\"user_message\">"+umsg+"</span></div>");
         }
         if (type == 'system') {
-            $('#message_box').append("<div class=\"system_msg\">"+umsg+"</div>");
+            $('#mychannel').append("<div class=\"system_msg\">"+umsg+"</div>");
         }
        
-        $('#message').val(''); //reset text
+        $('#input-mychannel').val(''); //reset text
     };
    
-    websocket.onerror   = function(ev){$('#message_box').append("<div class=\"system_error\">Error Occurred - "+ev.data+"</div>");};
-    websocket.onclose   = function(ev){$('#message_box').append("<div class=\"system_msg\">Connection Closed</div>");};
+    websocket.onerror   = function(ev){$('#mychannel').append("<div class=\"system_error\">Error Occurred - "+ev.data+"</div>");};
+    websocket.onclose   = function(ev){$('#mychannel').append("<div class=\"system_msg\">Connection Closed</div>");};
 
 
 
 
-    $("#message").keypress(function (e) {
+    $("#input-mychannel").keypress(function (e) {
         if (e.which == 13) {
             $("#send-btn").click();
             return false;  // have jQuery call e.preventDefault() and e.stopPropagation()
@@ -61,13 +61,13 @@ $(document).ready(function(){
         //convert and send data to server
         websocket.send(JSON.stringify(msg));
         
-        $("#chat-button-div").toggle();
+        $("#start-chat-button-div").toggle();
         $("#picture").toggle();
-        $("#chatbox").toggle();
+        $("#mychat").toggle();
     });
 
     $("#send-btn").click(function(){         //user clicks message send button  
-        var mymessage = $('#message').val();
+        var mymessage = $('#input-mychannel').val();
         var myname = $("#username").text();
         var mylid = $("#lid").text();
         var mycolor = "260CEB";
@@ -111,24 +111,20 @@ $(document).ready(function(){
 	</div>
 
 	<div id="aside-img-right" role="complimentary">
-	  <div id="chat-button-div">
-	    <button id="start-chat">Start chat</button>
-	  </div>
-
-	  <div id="chatbox" class="chat_wrapper" style="display:none">
-	    <div class="message_box" id="message_box"></div>
-	    <!--
-		<div>
-		  <input type="text" name="name" id="name" placeholder="Your Name" maxlength="10"/>
-		  <input type="text" name="color" id="color" maxlength="10"/>
-		</div>
-		-->
-	    <div class="panel">
-	      <input type="text" name="message" id="message" placeholder="Message" maxlength="80"/>
-	      <button id="send-btn">Send</button>
+	  <div id="chat-div">
+	    <div id="start-chat-button-div">
+	      <button id="start-chat" class="public-style">Start chat</button>
 	    </div>
-	  </div> <!-- chat_wrapper -->
-	  
+
+	    <div id="mychat" class="single-channel" style="display:none">
+	      <div class="messages" id="mychannel"></div>
+	      <div class="chat-entry">
+		<input class="chat-input" type="text" name="message" id="input-mychannel" placeholder="Message" maxlength="80"/>
+		<button id="send-btn" class="public-style">Send</button>
+	      </div> <!-- chat-entry -->
+	    </div> <!-- single-channel -->
+	  </div> <!-- chat div -->
+
 	  <div id="picture">
 	    <img src="/img/fill-contact.jpg" alt="Child sitting on a the floor of a book store, engrossed in reading">
 	    <p class="note">Image care of <a href="https://www.flickr.com/photos/48439369@N00/2100913578">Tim Pierce</a></p>
