--- a/templates/rotations/admin/reports/item_circ_counts.tmpl
+++ b/templates/rotations/admin/reports/item_circ_counts.tmpl
@@ -41,7 +41,8 @@ $('document').ready(function(){
 </script>
 
 
-<div role="main">
+
+<div id="center" role="main">
 
     <div id="waitDiv">
       Loading... <img src="/wait.gif">
