clear fix for nav

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -674,9 +674,10 @@ div.termtitle {
     color: #505050;
 }
 
-.clear {
+#clear {
+	display: block;
 	clear: both;
-	height: .5px;
+	height: 1px;
 	width: 100%;
 	margin: 0;
 	padding: 0;
