--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -163,7 +163,7 @@ $('document').ready(function(){
     <li id="menu_rotations_admin" style="display:none;"><a href="/cgi-bin/rotations_admin.cgi?rm=report_received_cnt">Rotations Admin</a></li>
   </ul>
 </nav>
-<div class="clear"></div>
+<div id="clear"></div>
 
 
 <!-- Begin content -->
