sub menu borrow fix

--- a/templates/submenu_borrow.tmpl
+++ b/templates/submenu_borrow.tmpl
@@ -68,6 +68,7 @@
      add a set_secondary_tab() call in the
      page template (eg: in search_advanced.tmpl
 -->
+<div id="clear"></div>
 
 <!-- Content -->
 
