foot fix for this page, missing div

--- a/templates/rotations/receiving.tmpl
+++ b/templates/rotations/receiving.tmpl
@@ -116,6 +116,7 @@ function downloadMarc() {
           </tbody>
         </table>
       </div>
+      </div>
 
   <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
