--- a/templates/search/history.tmpl
+++ b/templates/search/history.tmpl
@@ -82,14 +82,14 @@ $('document').ready(function(){
 
 <div id="center" role="main">
 
-    <div><br />
+    <div id="instructions" class="tone-box">
       <h3>View history</h3>
       <form>
 
 	      <p>From:</p> <input id="startdate" type="text">
 	      <p>To: (confusing fix xyz)</p> <input id="enddate" type="text">
         <br />
-	      <input id="dateButton" type="button" value="Fetch requests within this date range" class="library-style">
+	      <input id="dateButton fill-button" type="button" value="Fetch requests within this date range" class="library-style">
 
       </form>
     </div>
