added input type button

--- a/templates/rotations/receiving.tmpl
+++ b/templates/rotations/receiving.tmpl
@@ -85,7 +85,7 @@ function downloadMarc() {
       <h3>Receive rotation titles</h3>
       <div id="scanner">
 
-	<div class="tone-box">
+	<div id="instructions" class="tone-box">
 	      <form id="scan_form" onSubmit="return false;"> <!-- stop the form from submitting... submitting will reload, losing the data in the table -->
 <!--
 		<p>Scan a barcode: <input type="text" name="barcode" maxlength="14" onChange="barcode_scanned(this.value); this.value=''; this.focus(); return false;"></p>
