--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -189,7 +189,7 @@ nav li a
 /* #pub-nav-primaryigation link states */
 /* unvisted link */
 #pub-nav-primary li a:link {
- 	background: #183935;/*main dark green colour*/
+ 	background: #183935;/*Main dark green colour*/
  	text-decoration: none;
 	color: #fff;
 }
@@ -433,6 +433,29 @@ input[type=submit]
 }
 
 input[type=submit]:hover
+{
+    margin: .5em;
+	padding: .3em 1em;
+	border-radius: 5px;
+	background-color: #06a0ca;
+	color: #fff;
+    font-size: 1.4em;
+    width: auto;
+    text-transform:capitalize;
+}
+
+input[type=button]
+{
+    margin: .5em;
+	padding: .3em 1em;
+	border-radius: 5px;
+    color: #fff;
+    font-size: 1.4em;
+    width: auto;
+    text-transform:capitalize;
+}
+
+input[type=button]:hover
 {
     margin: .5em;
 	padding: .3em 1em;
