added library style to button

--- a/templates/rotations/receiving.tmpl
+++ b/templates/rotations/receiving.tmpl
@@ -92,7 +92,7 @@ function downloadMarc() {
 -->
 		<p>
 		  Scan a barcode: <input id="barcode" type="text" name="barcode">
-		  <input id="scanOk" type="button" value="Ok">
+		  <input id="scanOk" type="button" value="Ok" class="library-style">
 		</p>
 		<br/>
 	      </form>
