text resizing - forgot the font-size: 100% in <body> css

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -42,6 +42,7 @@ html, body {
     margin: 0;
     padding: 0;
     background: #f3f3f3;
+    font-size: 100%;  /* permits better scaling (all other font sizes in em) */
 }
 
 img 
