--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -15,7 +15,7 @@ $('document').ready(function(){
  <form action="/cgi-bin/lightning.cgi" method="post" name="loginform">
   <div class="login">
   <div class="login-content">
-  	<div class="login-header">
+  	<div class="login-header-library">
   	  <span class="login-header-title">Sign in to fILL</span>
   	</div>
 	  <fieldset>
